[package]
name = "energy_trading_api"
version = "0.1.0"
description = "API Server for management of PV energy items (NFTs) on Polkadot blockchain"
authors = ["Andrii Dubyk <andrii.dubyk@482.solutions>"]
license = "Apache-2.0 License"
categories = ["blockchain", "polkadot", "http"]
keywords = [
    "api", "server", "blockchain", "polkadot", "web", "api management", "rocket", "rust"
]
readme = "README.md"
repository = "https://github.com/482solutions/pv_solar_energy_trading_api"
exclude = [
    ".gitignore",
    "config.yml",
    "configs"
]
edition = "2021"

[dependencies]
clap = { version = "3.1.18", features = ["cargo", "derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
config = "0.13.1"
futures = "0.3.21"
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets", "tls"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[[bin]]
name = "energy_trading_api"
path = "src/main.rs"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true